--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
-    <title>Quote Generator - Dishanta Kpatrick</title>
-</head>
-<body>
+    <title>Random Quotes</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
 
-    <div id="main">
+  <body>
+    <header>
+      <h1>Random Quotes</h1>
+      <button id="load-quote" class="load-quote">Show another quote</button>
+    </header>
 
+    <div class="container">
+      <div id="quote-box" class="quote-box">
+        <p class="quote">Every great developer you know got there by solving problems they were unqualified to solve until they actually did it.</p>
+        <p class="source">Patrick McKenzie<span class="citation">Twitter</span><span class="year">2016</span></p>
+      </div>
     </div>
-
-    <script src="app.js" type="text/javascript"></script>
-</body>
+    
+    <script src="js/script.js"></script>
+  </body>
 </html>
